dh_installwm: call after dh_link in dh call sequence, error out in compat 10 if there is no man page
Move dh_installwm after dh_link, so that a manpage created by dh_link
can be found.

Also error out in compat 10 if no manpage is found.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -565,6 +565,11 @@ B<dh_installdeb> no longer installs a maintainer-provided
 debian/I<package>.shlibs file.  This is now done by B<dh_makeshlibs>
 instead.
 
+=item -
+
+B<dh_installwm> refuses to create a broken package if no man page
+can be found (required to register for the x-window-manager alternative).
+
 =back
 
 =back
