--- a/debian/changelog
+++ b/debian/changelog
@@ -92,6 +92,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
      --disable-silent-rules (otherwise). (Closes: #551463, #680686)
   * dh_compress: exclude .xz .lzma and .lz files from compression
     (Closes: #778927)
+  * dh_installwm: call by dh after dh_link (Closes: #781077),
+    error out in compat 10 if no man page found
 
   [ Jason Pleau ]
   * dh_installchangelogs: Add CHANGES.md to the list of common changelog
