d/changelog: Add entry for Paul Wise's patch
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -80,6 +80,9 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     shlibs file as it is now done by dh_makeshlibs instead.
   * dh_installdocs: Remove remark about dh_installdocs not being
     idempotent as it no longer adds anything to maintainer scripts.
+  * autoscripts/*-emacsen: Apply patch from Paul Wise to check that
+    emacs-package-{install,remove} is (still) present before invoking
+    it.  (Closes: #736896)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
