--- a/debian/changelog
+++ b/debian/changelog
@@ -114,6 +114,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * debhelper.pod: Clarify "ENVIRONMENT" requirements for Makefile syntax.
     (Closes: #780133)
 
+  [ Translation updates ]
+  * pt - Thanks to Américo Monteiro.
+    (Closes: #758575)
+
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
 debhelper (9.20150101) unstable; urgency=medium
