dh_install: Document how to use dh-exec to rename files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -83,6 +83,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * autoscripts/*-emacsen: Apply patch from Paul Wise to check that
     emacs-package-{install,remove} is (still) present before invoking
     it.  (Closes: #736896)
+  * dh_install.1: Document that dh-exec can be used to do renaming
+    and provie a trivial example of how to achieve it.  (Closes: #245554)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
