Fix the wording in the dh_install reference to dh_exec.
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -84,7 +84,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     emacs-package-{install,remove} is (still) present before invoking
     it.  (Closes: #736896)
   * dh_install.1: Document that dh-exec can be used to do renaming
-    and provie a trivial example of how to achieve it.  (Closes: #245554)
+    and provide a trivial example of how to achieve it.  (Closes: #245554)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
