--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20150101.1) UNRELEASED; urgency=medium
+debhelper (9.20150501) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_strip: Recognise .node as potential ELF binaries that
@@ -126,7 +126,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * pt - Thanks to Américo Monteiro.
     (Closes: #758575)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
+ -- Niels Thykier <niels@thykier.net>  Fri, 01 May 2015 14:53:16 +0200
 
 debhelper (9.20150101) unstable; urgency=medium
 
