--- a/debian/changelog
+++ b/debian/changelog
@@ -96,7 +96,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     control field names. (Closes: #772129)
   * add DH_QUIET environment variable to make things more silent
   * dh: don't output commands to run if DH_QUIET is set
-  * buildsystems print commands unless DH_QUIET is set (Closes: #639168, #680687)
+  * buildsystems print commands unless DH_QUIET is set
+    (Closes: #639168, #680687)
   * autoconf is always passed one of
      --enable-silent-rules (if DH_QUIET is set) or
      --disable-silent-rules (otherwise). (Closes: #551463, #680686)
