d/control: Remove obsolete versioned conflicts
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -89,6 +89,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     we do not need it any longer.  (Closes: #783898)
   * dh_gencontrol: Insert an empty misc:Pre-Depends to avoid warnings
     in packages for using a (now often) non-existing substvars.
+  * d/control: Remove versioned conflicts that are no longer relevant.
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
