--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20150501+ddebs) experimental; urgency=medium
+
+  * Add /experimental/ ddebs support *if* the environment
+    variable DH_BUILD_DDEBS is set to 1.
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 01 May 2015 20:09:11 +0200
+
 debhelper (9.20150501) unstable; urgency=medium
 
   [ Niels Thykier ]
