--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20150502+ddebs) experimental; urgency=medium
+
+  * Add /experimental/ ddebs support *if* the environment
+    variable DH_BUILD_DDEBS is set to 1.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:35:29 +0200
+
 debhelper (9.20150502) unstable; urgency=medium
 
   * dh_compress: REVERT change to avoid compressing ".xhtml"
