--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+debhelper (9.20150502) UNRELEASED; urgency=medium
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:08:08 +0200
+
 debhelper (9.20150501) unstable; urgency=medium
 
   [ Niels Thykier ]
