--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 debhelper (9.20150502) UNRELEASED; urgency=medium
 
+  * dh_compress: REVERT change to avoid compressing ".xhtml"
+    files due to #784016.  (Reopens: #740405, Closes: #784016)
+
  -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:08:08 +0200
 
 debhelper (9.20150501) unstable; urgency=medium
