--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (9.20150502) UNRELEASED; urgency=medium
+debhelper (9.20150502) unstable; urgency=medium
 
   * dh_compress: REVERT change to avoid compressing ".xhtml"
     files due to #784016.  (Reopens: #740405, Closes: #784016)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:08:08 +0200
+ -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:21:42 +0200
 
 debhelper (9.20150501) unstable; urgency=medium
 
