dh_bugfiles: Correct regression in installing bug-script
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20150507) UNRELEASED; urgency=medium
+
+  * dh_bugfiles: Fix regression in installing the reportbug
+    script correctly.  Thanks to Jakub Wilk for reporting.
+    (Closes: #784648)
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 07 May 2015 19:57:50 +0200
+
 debhelper (9.20150502) unstable; urgency=medium
 
   * dh_compress: REVERT change to avoid compressing ".xhtml"
