[i18n]: Updated Portuguese translation of manpage
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 debhelper (9.20150507) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_bugfiles: Fix regression in installing the reportbug
     script correctly.  Thanks to Jakub Wilk for reporting.
     (Closes: #784648)
+
+  [ Translation updates ]
+  * pt - Thanks to Américo Monteiro.
+    (Closes: #784582)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 07 May 2015 19:57:50 +0200
 
