--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20150507) UNRELEASED; urgency=medium
+debhelper (9.20150507) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_bugfiles: Fix regression in installing the reportbug
@@ -9,7 +9,7 @@ debhelper (9.20150507) UNRELEASED; urgency=medium
   * pt - Thanks to Américo Monteiro.
     (Closes: #784582)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 07 May 2015 19:57:50 +0200
+ -- Niels Thykier <niels@thykier.net>  Thu, 07 May 2015 20:07:49 +0200
 
 debhelper (9.20150502) unstable; urgency=medium
 
