--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+debhelper (9.20150519+ddebs) UNRELEASED; urgency=medium
+
+  * dh_strip: Add --ddeb-migration option to support migration
+    from a --dbg-package to a automatic ddeb.
+  * Dh_Lib.pm: Add "package_multiarch" function.
+  * d/control: Add versioned Build-Depends on dpkg-dev to support
+    creating ddebs with the ".deb" extension.
+  * Dh_lib.pm: Generate ddebs with the ".deb" extension.
+  * dh_gencontrol: Reduce the "pkg:arch" to "pkg" as APT and dpkg
+    disagree on what satisfies an "pkg:arch" dependency.
+  * dh_strip.1: Document what inhibits ddeb generation.
+  * dh_gencontrol: Only mark a ddeb as Multi-Arch: same if the
+    original deb was Multi-Arch: same.  All other ddebs are now
+    Multi-Arch: no (by omitting the field).
+  * dh_strip: Avoid generating a ddeb if the same name as an
+    explicitly declared package.  Apparently, Ubuntu has been
+    creating some of these manually.
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 19 May 2015 20:03:47 +0200
+
 debhelper (9.20150507) unstable; urgency=medium
 
   [ Niels Thykier ]
