--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20150519+ddebs) UNRELEASED; urgency=medium
+debhelper (9.20150519+ddebs) experimental; urgency=medium
 
   * dh_strip: Add --ddeb-migration option to support migration
     from a --dbg-package to a automatic ddeb.
@@ -16,7 +16,7 @@ debhelper (9.20150519+ddebs) UNRELEASED; urgency=medium
     explicitly declared package.  Apparently, Ubuntu has been
     creating some of these manually.
 
- -- Niels Thykier <niels@thykier.net>  Tue, 19 May 2015 20:03:47 +0200
+ -- Niels Thykier <niels@thykier.net>  Tue, 19 May 2015 21:56:55 +0200
 
 debhelper (9.20150507) unstable; urgency=medium
 
