changelog: Add entry for Emmanuel's commit
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20150508) UNRELEASED; urgency=medium
+
+  * Buildsystem.pm: Apply patch from Emmanuel Bourg to
+    provide doit_in_{build,source}dir_noerror methods.
+    (Closes: #785811)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200
+
 debhelper (9.20150507) unstable; urgency=medium
 
   [ Niels Thykier ]
