Dh_Lib: Remove _error_exitcode
Turns out there were no consumers left after all.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,9 +4,7 @@ debhelper (9.20150508) UNRELEASED; urgency=medium
     provide doit_in_{build,source}dir_noerror methods.
     (Closes: #785811)
   * Dh_Lib.pm: Promote error_exitcode to a regular exported
-    subroutine (from an internal one).  For backwards
-    compatibility the old _error_exitcode will be provided
-    until a known external is updated.
+    subroutine (from an internal one).
 
  -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200
 
