d/changelog: Document Osamu Aoki's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (9.20150508) UNRELEASED; urgency=medium
     (Closes: #785811)
   * Dh_Lib.pm: Promote error_exitcode to a regular exported
     subroutine (from an internal one).
+  * dh_compress: Apply patch from Osamu Aoki to avoid compressing
+    ".xhtml" files and to use a POSIX compliant find expression.
+    (Closes: #740405)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200
 
