dh_gencontrol: Use debugsym section for ddebs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20150520+ddebs) UNRELEASED; urgency=medium
+
+  * dh_gencontrol: Put ddebs in the "debugsym" section.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 25 May 2015 12:10:37 +0200
+
 debhelper (9.20150519+ddebs) experimental; urgency=medium
 
   * dh_strip: Add --ddeb-migration option to support migration
