--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (9.20150508) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Buildsystem.pm: Apply patch from Emmanuel Bourg to
     provide doit_in_{build,source}dir_noerror methods.
     (Closes: #785811)
@@ -8,6 +9,10 @@ debhelper (9.20150508) UNRELEASED; urgency=medium
   * dh_compress: Apply patch from Osamu Aoki to avoid compressing
     ".xhtml" files and to use a POSIX compliant find expression.
     (Closes: #740405)
+
+  [ Thibaut Paumard ]
+  * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
+    Beckmann (Closes: #788098).
 
  -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200
 
