--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (9.20150508) UNRELEASED; urgency=medium
   * dh_compress: Apply patch from Osamu Aoki to avoid compressing
     ".xhtml" files and to use a POSIX compliant find expression.
     (Closes: #740405)
+  * dh_makeshlibs: Fix typo in manpage.  Thanks to Jakub Wilk for
+    reporting it.  (Closes: #788473)
 
   [ Thibaut Paumard ]
   * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
