dh_strip: Add a --ddebs option for packagers
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (9.20150520+ddebs) UNRELEASED; urgency=medium
 
   * dh_gencontrol: Put ddebs in the "debugsym" section.
+  * dh_strip: Support a new --[no-]ddebs option intended for
+    packages to disable automatic ddebs.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 25 May 2015 12:10:37 +0200
 
