dh_auto_clean: Run tests as normal during cross-building
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ debhelper (9.20150508) UNRELEASED; urgency=medium
     (Closes: #740405)
   * dh_makeshlibs: Fix typo in manpage.  Thanks to Jakub Wilk for
     reporting it.  (Closes: #788473)
+  * dh_auto_test: Run tests by default even during cross-building.
+    (Closes: #726967)
 
   [ Thibaut Paumard ]
   * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
