--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20151117+unreleased) UNRELEASED; urgency=medium
+
+  * dh_compress: Apply patch from Michael Biebl to skip
+    compression of .devhelp2 files.  (Closes: #789153)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 21 Nov 2015 00:33:52 +0100
+
 debhelper (9.20151117) unstable; urgency=medium
 
   [ Niels Thykier ]
