--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,20 @@
-debhelper (9.20150520+ddebs) UNRELEASED; urgency=medium
+debhelper (9.20150628) unstable; urgency=medium
 
+  * Upload to unstable with ddebs support disabled by default.
+
+  [ Niels Thykier ]
+  * Buildsystem.pm: Apply patch from Emmanuel Bourg to
+    provide doit_in_{build,source}dir_noerror methods.
+    (Closes: #785811)
+  * Dh_Lib.pm: Promote error_exitcode to a regular exported
+    subroutine (from an internal one).
+  * dh_compress: Apply patch from Osamu Aoki to avoid compressing
+    ".xhtml" files and to use a POSIX compliant find expression.
+    (Closes: #740405)
+  * dh_makeshlibs: Fix typo in manpage.  Thanks to Jakub Wilk for
+    reporting it.  (Closes: #788473)
+  * dh_auto_test: Run tests by default even during cross-building.
+    (Closes: #726967)
   * dh_gencontrol: Put ddebs in the "debugsym" section.
   * dh_strip: Support a new --[no-]ddebs option intended for
     packages to disable automatic ddebs.
@@ -8,7 +23,11 @@ debhelper (9.20150520+ddebs) UNRELEASED; urgency=medium
     of the ddebs itself now that ddebs uses a ".deb"
     extension.
 
- -- Niels Thykier <niels@thykier.net>  Mon, 25 May 2015 12:10:37 +0200
+  [ Thibaut Paumard ]
+  * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
+    Beckmann (Closes: #788098).
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 13:51:48 +0200
 
 debhelper (9.20150519+ddebs) experimental; urgency=medium
 
@@ -29,28 +48,6 @@ debhelper (9.20150519+ddebs) experimental; urgency=medium
     creating some of these manually.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 19 May 2015 21:56:55 +0200
-
-debhelper (9.20150508) UNRELEASED; urgency=medium
-
-  [ Niels Thykier ]
-  * Buildsystem.pm: Apply patch from Emmanuel Bourg to
-    provide doit_in_{build,source}dir_noerror methods.
-    (Closes: #785811)
-  * Dh_Lib.pm: Promote error_exitcode to a regular exported
-    subroutine (from an internal one).
-  * dh_compress: Apply patch from Osamu Aoki to avoid compressing
-    ".xhtml" files and to use a POSIX compliant find expression.
-    (Closes: #740405)
-  * dh_makeshlibs: Fix typo in manpage.  Thanks to Jakub Wilk for
-    reporting it.  (Closes: #788473)
-  * dh_auto_test: Run tests by default even during cross-building.
-    (Closes: #726967)
-
-  [ Thibaut Paumard ]
-  * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
-    Beckmann (Closes: #788098).
-
- -- Niels Thykier <niels@thykier.net>  Wed, 20 May 2015 21:53:08 +0200
 
 debhelper (9.20150507) unstable; urgency=medium
 
