d/changelog: Open new entry and document missing change
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20150629) UNRELEASED; urgency=medium
+
+  * d/changelog: Add missing entry for dh_md5sums/#786695 in
+    the 9.20150628 release.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
+
 debhelper (9.20150628) unstable; urgency=medium
 
   * Upload to unstable with ddebs support disabled by default.
@@ -22,6 +29,8 @@ debhelper (9.20150628) unstable; urgency=medium
   * dh_builddeb/dh_gencontrol: Let dpkg figure out the name
     of the ddebs itself now that ddebs uses a ".deb"
     extension.
+  * dh_md5sums: create DEBIAN dir in ddebs before using it.
+    (Closes: #786695)
 
   [ Thibaut Paumard ]
   * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
