Makefile: LC_ALL=C before sort
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
 
   * d/changelog: Add missing entry for dh_md5sums/#786695 in
     the 9.20150628 release.
+  * Makefile: Set LC_ALL=C when sorting.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
