--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
   * d/changelog: Add missing entry for dh_md5sums/#786695 in
     the 9.20150628 release.
   * Makefile: Set LC_ALL=C when sorting.
+  * dh: Avoid passing --parallel to other debhelper commands
+    if it is the only option and "parallel" is not set (or
+    set to 1) in DEB_BUILD_OPTIONS.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
