--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
+
+  * dh/dh_auto_*: Apply patch from "Dhole" to define
+    SOURCE_DATE_EPOCH.  (Closes: #791823)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 12 Aug 2015 10:46:59 +0200
+
 debhelper (9.20150811) unstable; urgency=medium
 
   * d/changelog: Add missing entry for dh_md5sums/#786695 in
