dh_strip: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
   * dh: Avoid passing --parallel to other debhelper commands
     if it is the only option and "parallel" is not set (or
     set to 1) in DEB_BUILD_OPTIONS.
+  * dh_strip: Apply patch from Guillem Jover to fix a typo.
+    (Closes: #792207)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
