dh_makeshlibs: Fix uninitialise warning on error
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
     set to 1) in DEB_BUILD_OPTIONS.
   * dh_strip: Apply patch from Guillem Jover to fix a typo.
     (Closes: #792207)
+  * dh_makeshlibs: Avoid an uninitialise warning in some
+    error cases.  Thanks to Jakub Wilk for reporting it.
+    (Closes: #793092)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
