d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
     set to 1) in DEB_BUILD_OPTIONS.
   * dh_strip: Apply patch from Guillem Jover to fix a typo.
     (Closes: #792207)
-  * dh_makeshlibs: Avoid an uninitialise warning in some
+  * dh_makeshlibs: Avoid an uninitialised warning in some
     error cases.  Thanks to Jakub Wilk for reporting it.
     (Closes: #793092)
 
