Dh_Lib: Try to use dpkg-architecture variables from the environment
This should avoid quite costly calls to dpkg-architecture, when the
user has preinitialized them either through dpkg-buildpackage or
«dpkg-architecture -c debian/rules binary» for example.

Signed-off-by: Guillem Jover <guillem@debian.org>
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
   * dh_makeshlibs: Avoid an uninitialised warning in some
     error cases.  Thanks to Jakub Wilk for reporting it.
     (Closes: #793092)
+  * Dh_Lib.pm: Apply patch from Guillem Jover to use the
+    value of dpkg-architecture variables from the environment,
+    if present.  (Closes: #793440)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
