Dh_Lib: Use Dpkg::Arch::debarch_is insted of calling dpkg-architecture
This should give a speed boost, as we avoid having to execute the
script, load and parse the architecture tables, and possibly
initialize the expensive architecture variables (if they are not
already present on the environment) on each check.

[nthykier: Lazy load Dpkg::Arch and fix inverted boolean check]

Signed-off-by: Guillem Jover <guillem@debian.org>
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
     if present.  (Closes: #793440)
   * Dh_Buildsystems.pm/Dh_Lib.pm: Import Exporter's import
     subroutine rather than adding Exporter to @ISA.
+  * Dh_Lib.pm: Use Dpkg::Arch's debarch_is rather than running
+    dpkg-architecture to determine if an architecture matches
+    a wildcard.  Heavily based on a patch from Guillem Jover.
+    (Closes: #793443)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
