dh_strip: Always compress debug symbols in ddebs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
     dpkg-architecture to determine if an architecture matches
     a wildcard.  Heavily based on a patch from Guillem Jover.
     (Closes: #793443)
+  * dh_strip: Always compress debug sections of debug symbols
+    in ddebs.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
