dh_strip: Strip .note and .comment from static libs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
     (Closes: #793443)
   * dh_strip: Always compress debug sections of debug symbols
     in ddebs.
+  * dh_strip: Strip ".comment" and ".note" sections from static
+    libraries.  Thanks to Helmut Grohne for the suggestion.
+    (Closes: #789351)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
