fix file lists and abspaths for dh_compress w/test
Fix dh_compress to accept file names on the command line that it would
otherwise compress anyway, by removing duplicates.

Also allow dh_compress to accept absolute paths, by stripping the
leading slashes.

Add tests for the desired behavior in t/dh_compress.t .

Fix an undefined warning in dh_compress that is sometimes triggered.

Add a . -> lib symlink so that prove -vwlr t works.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     rather maintscripts.
   * dh_installdirs.1: Add a note that many packages will work
     fine without calling dh_installdirs.  (Closes: #748993)
+  * dh_compress: Apply patch from Rafael Kitover to support
+    passing files to dh_compress that would have been
+    compressed anyway.  (Closes: #794898)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
