dh_makeshlibs: Call dpkg-gensymbols on all libs even on error
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,10 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
   * d/control: Bump dependency on dpkg-dev to 1.18.2~ for
     ddebs.  Build-depends not bumped since debhelper itself
     does not produce any ddebs.
+  * dh_makeshlibs: Continue generating reports from
+    dpkg-gensymbols after the first error.  This helps
+    packages with multiple libraries to spot all the symbol
+    issues in one build.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
