--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20150629) UNRELEASED; urgency=medium
+debhelper (9.20150811) unstable; urgency=medium
 
   * d/changelog: Add missing entry for dh_md5sums/#786695 in
     the 9.20150628 release.
@@ -37,7 +37,7 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
     packages with multiple libraries to spot all the symbol
     issues in one build.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
+ -- Niels Thykier <niels@thykier.net>  Tue, 11 Aug 2015 22:47:08 +0200
 
 debhelper (9.20150628) unstable; urgency=medium
 
