Add cross-compile support to the cmake build system
[nthykier: Minor style changes/refactoring]

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
 
   * dh/dh_auto_*: Apply patch from "Dhole" to define
     SOURCE_DATE_EPOCH.  (Closes: #791823)
+  * cmake.pm: Add better cross-compile support for cmake.
+    Heavily based on a patch from Helmut Grohne.
+    (Closes: #794396)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 12 Aug 2015 10:46:59 +0200
 
