d/changelog: Use Eduard Sanou's real name
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
 
-  * dh/dh_auto_*: Apply patch from "Dhole" to define
+  * dh/dh_auto_*: Apply patch from Eduard Sanou to define
     SOURCE_DATE_EPOCH.  (Closes: #791823)
   * cmake.pm: Add better cross-compile support for cmake.
     Heavily based on a patch from Helmut Grohne.
