dh_installinit: Conditionally run the postint snippets
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ debhelper (9.20151005) unstable; urgency=medium
     patches from Niko Tyni to make timestamp of directories
     created from "find"-pipelines reproducible.
     (Closes: #802005)
+  * dh_installinit: The postinst snippets are now only run
+    during "configure" or "abort-upgrade".
+    (Closes: #188028)
 
   [ Translations ]
   * Update German translation (Chris Leick)
