dh_gencontrol: Move debug debs back into section 'debug'
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh/dh_auto_*: Apply patch from Eduard Sanou to define
     SOURCE_DATE_EPOCH.  (Closes: #791823)
   * cmake.pm: Add better cross-compile support for cmake.
@@ -11,7 +12,10 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     Michael Terry for the assistance plus suggestions.
     (Closes: #719148)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 12 Aug 2015 10:46:59 +0200
+  [ Paul Tagliamonte ]
+  * dh_gencontrol: Put debug debs back in the "debug" section.
+
+ -- Paul Tagliamonte <paultag@debian.org>  Fri, 14 Aug 2015 21:25:16 +0200
 
 debhelper (9.20150811) unstable; urgency=medium
 
