dh_installinit: Quote directory name used in regex
And, remove a redundant variable.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     Felix Geyer, Lisandro Damián Nicanor Pérez Meyer and
     Michael Terry for the assistance plus suggestions.
     (Closes: #719148)
+  * dh_installinit: Quote directory name before using it in
+    a regex.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
