dh_installinit: Install tmpfiles.d files for systemd-only packages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,10 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     (Closes: #719148)
   * dh_installinit: Quote directory name before using it in
     a regex.
+  * dh_installinit: Create script snippts for tmpfiles.d
+    files even if the package has no sysvinit script or
+    explicit debian/<package>.service file.
+    (Closes: #795519)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
