--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
+  * dh_strip/dh_gencontrol: Add a space separated list of
+    build-ids.
 
  -- Paul Tagliamonte <paultag@debian.org>  Fri, 14 Aug 2015 21:25:16 +0200
 
