Revert "dh_makeshlibs [compat 10]: Pass -X to ldconfig"
This reverts commit 3543394784238e0f0c75988bb7a647fab0d8c26c.

The glibc maintainers said this change would not make sense to deploy
in debhelper.  Instead, the change (if any) should be done on the
glibc side.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     files even if the package has no sysvinit script or
     explicit debian/<package>.service file.
     (Closes: #795519)
+  * dh_makeshlibs: Revert passing -X to ldconfig in compat 10
+    after talking with the glibc maintainer.  The is not the
+    right place to make this change.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
