d/control: Remove Homepage field
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh_makeshlibs: Revert passing -X to ldconfig in compat 10
     after talking with the glibc maintainer.  The is not the
     right place to make this change.
+  * d/control: Remove the homepage field.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
