d/changelog: Expand a bit on an entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,8 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
   * dh_strip/dh_gencontrol: Add a space separated list of
-    build-ids.
+    build-ids in the control file of packages containing
+    deattached debug symbols.
 
   [ Andrew Ayer ]
   * d/control: Depend on dh-strip-nondeterminism
