--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * d/control: Remove the homepage field.
   * dh: Make dh_strip_nondeterminism optional, so debhelper
     does not need to build-depend on it.
+  * dh_gencontrol/dh_builddeb: Temporarily stop building ddebs
+    for udebs as dpkg-gencontrol and dpkg-deb does not agree
+    the default file extension for these.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
