dh_builddeb: Generate the correct filename for udebs
dpkg-gencontrol does not include "Package-Type" in the control file
(see #575059, #452273) for political reasons.

dh_builddeb used to guess the "correct" filename, but it fell short
when dpkg-gencontrol -V was used.  The best solution so far: Let
dpkg-deb build the deb and have dh_builddeb fix the extension.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,11 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh_gencontrol/dh_builddeb: Temporarily stop building ddebs
     for udebs as dpkg-gencontrol and dpkg-deb does not agree
     the default file extension for these.
+  * dh_builddeb: Generate udebs with the correct filename even
+    when "-V" is passed to dpkg-gencontrol.  This relies on
+    dpkg-deb getting everything but the extension correct
+    (see #575059, #452273 for why it does not produce the
+     correct extesion).  (Closes: #516721, #677353)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
