--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,10 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     (see #575059, #452273 for why it does not produce the
      correct extesion).  (Closes: #516721, #677353)
   * Dh_Lib.pm: Drop now unused "udeb_filename" subroutine.
+  * dh_strip.1: Correct the documentation about ddebs to
+    reflect the current implementation (rather than the
+    desired "state").  Thanks to Jakub Wilk for the report.
+    (Closes: #797002)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
