--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     reflect the current implementation (rather than the
     desired "state").  Thanks to Jakub Wilk for the report.
     (Closes: #797002)
+  * dh_fixperms: Reset permissions to 0644 for .js, .css,
+    .jpeg, .jpg, .png, and .gif files.  Thanks to Ernesto
+    Hernández-Novich for the suggestion.  (Closes: #595097)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
