d/changelog: Add missing word
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,8 +44,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     Files listed here will not cause dh_install to complain
     with --list-missing.  Thanks to Peter Eisentraut for the
     suggestion.  (Closes: #436240)
-  * Cherry-pick from Chris Lamb to only read the latest
-    changelog entry when determing the SOURCE_DATE_EPOCH.
+  * Cherry-pick patch from Chris Lamb to only read the
+    latest changelog entry when determing the
+    SOURCE_DATE_EPOCH.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
