--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,10 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * Cherry-pick patch from Chris Lamb to only read the
     latest changelog entry when determing the
     SOURCE_DATE_EPOCH.
+  * Provide a better example of how to insert the debhelper
+    maintainer script snippets into a maintainer script
+    written in Perl.  Thanks to Jakub Wilk for reporting the
+    issues.  (Closes: #797904)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
