dh_shlibdeps: Accept -L multiple times
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     maintainer script snippets into a maintainer script
     written in Perl.  Thanks to Jakub Wilk for reporting the
     issues.  (Closes: #797904)
+  * dh_shlibdeps: The "-L" option can now be passed multiple
+    times with different package names.  Thanks to Tristan
+    Schmelcher for the suggestion.  (Closes: #776103)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
