--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,10 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh_shlibdeps: The "-L" option can now be passed multiple
     times with different package names.  Thanks to Tristan
     Schmelcher for the suggestion.  (Closes: #776103)
+  * dh,Buildsytems: In compat 10, default to --parallel.
+  * dh,Buildsytems: Accept "--no-parallel" to disable
+    parallel builds.  It is effectively the same as using
+    --max-parallel=1 but may be more intuative to some people.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
